--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 </head>
 <body>
 
-    <h1>University Course Assistant</h1>
+    <h1>Applied Ecology and Evolution 4 Chatbot</h1>
     <button id="dark-mode-toggle" onclick="toggleDarkMode()">Toggle Dark Mode</button>
     <p>Select the week to begin:</p>
 
