--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Applied Ecology and Evolution 4 Chatbot</title>
+
+    <!-- Import Montserrat Font from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Montserrat', sans-serif;
             background-color: #f4f4f4;
             color: #333;
-            text-align: center;
-            padding: 20px;
             margin: 0;
+            padding: 20px;
             transition: background-color 0.3s, color 0.3s;
+            display: flex;
+            justify-content: space-between;
         }
 
         body.dark-mode {
@@ -20,19 +25,71 @@
             color: #ffffff;
         }
 
-        h1 {
-            color: #007bff;
+        .left-side {
+            width: 40%;
+            text-align: left;
         }
 
-        .dark-mode h1 {
-            color: #8ab4f8;
+        .left-side img {
+            width: 400px; /* Increased size */
+            height: auto;
+            margin-bottom: 20px;
+        }
+
+        .left-side h1 {
+            color: #333; /* Changed to match text color */
+            margin-bottom: 10px;
+        }
+
+        .left-side p {
+            margin-bottom: 20px;
+            font-size: 1rem;
+            line-height: 1.5;
+            color: #555;
+        }
+
+        .dark-mode .left-side h1 {
+            color: #ffffff; /* Matches text color in dark mode */
+        }
+
+        .dark-mode .left-side p {
+            color: #bbbbbb;
+        }
+
+        #dark-mode-toggle {
+            cursor: pointer;
+            padding: 10px 20px;
+            background-color: #cccccc; /* Gray background */
+            color: #333;
+            border: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            transition: background-color 0.3s ease;
+        }
+
+        #dark-mode-toggle:hover {
+            background-color: #aaaaaa; /* Darker gray on hover */
+        }
+
+        .dark-mode #dark-mode-toggle {
+            background-color: #444444; /* Gray for dark mode */
+            color: #ffffff;
+        }
+
+        .dark-mode #dark-mode-toggle:hover {
+            background-color: #666666; /* Darker gray for dark mode */
+        }
+
+        .right-side {
+            width: 55%;
+            text-align: left;
         }
 
         .week-buttons {
-            margin: 20px 0;
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
+            justify-content: flex-start;
+            margin-bottom: 20px;
         }
 
         .week-buttons button {
@@ -40,34 +97,24 @@
             margin: 5px;
             font-size: 1rem;
             border: none;
-            background-color: #007bff;
-            color: white;
+            background-color: #cccccc; /* Gray background */
+            color: #333;
             cursor: pointer;
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
 
         .week-buttons button:hover {
-            background-color: #0056b3;
+            background-color: #aaaaaa; /* Darker gray on hover */
         }
 
         .dark-mode .week-buttons button {
-            background-color: #1a73e8;
+            background-color: #444444; /* Gray for dark mode */
+            color: #ffffff;
         }
 
         .dark-mode .week-buttons button:hover {
-            background-color: #00449e;
-        }
-
-        #subtitle {
-            margin: 20px 0;
-            font-size: 1.5rem;
-            color: #555;
-            transition: color 0.3s;
-        }
-
-        .dark-mode #subtitle {
-            color: #bbbbbb;
+            background-color: #666666; /* Darker gray for dark mode */
         }
 
         #chat-container {
@@ -80,12 +127,12 @@
             width: 100%;
             max-width: 600px;
             height: 60vh;
-            border: 1px solid #ccc;
+            border: 1px solid #cccccc;
             padding: 10px;
             border-radius: 5px;
-            background-color: white;
+            background-color: #f0f0f0; /* Gray background */
             overflow-y: auto;
-            margin: 0 auto;
+            margin-top: 20px;
             transition: background-color 0.3s, border-color 0.3s;
         }
 
@@ -100,8 +147,10 @@
             padding: 10px;
             margin-top: 10px;
             font-size: 16px;
-            border: 1px solid #ccc;
+            border: 1px solid #cccccc;
             border-radius: 5px;
+            background-color: #f0f0f0; /* Gray background */
+            color: #333;
             transition: background-color 0.3s, border-color 0.3s, color 0.3s;
             margin-bottom: 20px;
         }
@@ -136,81 +185,61 @@
             background-color: #005d54;
         }
 
-        #dark-mode-toggle {
-            margin: 20px 0;
-            cursor: pointer;
-            padding: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            font-size: 1rem;
-            transition: background-color 0.3s ease;
-        }
-
-        #dark-mode-toggle:hover {
-            background-color: #0056b3;
-        }
-
-        .dark-mode #dark-mode-toggle {
-            background-color: #1a73e8;
-        }
-
-        .dark-mode #dark-mode-toggle:hover {
-            background-color: #00449e;
-        }
-
-        @media (max-width: 600px) {
-            h1 {
-                font-size: 1.5rem;
+        @media (max-width: 900px) {
+            body {
+                flex-direction: column;
+                align-items: center;
             }
 
-            .week-buttons button {
-                font-size: 0.875rem;
-                padding: 8px 16px;
+            .left-side,
+            .right-side {
+                width: 100%;
+                text-align: center;
             }
 
-            #subtitle {
-                font-size: 1.25rem;
+            .week-buttons {
+                justify-content: center;
             }
 
+            #chat-box,
             #user-input {
-                font-size: 1rem;
-            }
-
-            #dark-mode-toggle {
-                font-size: 0.875rem;
+                max-width: 100%;
             }
         }
     </style>
 </head>
 <body>
 
-    <h1>Applied Ecology and Evolution 4 Chatbot</h1>
-    <button id="dark-mode-toggle" onclick="toggleDarkMode()">Toggle Dark Mode</button>
-    <p>Select the week to begin:</p>
-
-    <div class="week-buttons">
-        <button onclick="selectWeek(1)">Week 1</button>
-        <button onclick="selectWeek(2)">Week 2</button>
-        <button onclick="selectWeek(3)">Week 3</button>
-        <button onclick="selectWeek(4)">Week 4</button>
-        <button onclick="selectWeek(5)">Week 5</button>
-        <button onclick="selectWeek(6)">Week 6</button>
-        <button onclick="selectWeek(7)">Week 7</button>
-        <button onclick="selectWeek(8)">Week 8</button>
-        <button onclick="selectWeek(9)">Week 9</button>
-        <button onclick="selectWeek(10)">Week 10</button>
+    <div class="left-side">
+        <img src="background.png" alt="Course Logo">
+        <h1>Applied Ecology and Evolution 4 Chatbot</h1>
+        <p>Select a week to get started! The Chatbot will answer your questions based on a curated library of literature. Note that your chat will be lost if you navigate away from the page, refresh the page, or click on a different week. Make sure to copy important parts of your conversations to your journal to save them.</p>
+        <button id="dark-mode-toggle" onclick="toggleDarkMode()">Toggle Dark Mode</button>
     </div>
 
-    <h2 id="subtitle"></h2>
+    <div class="right-side">
+        <div class="week-buttons">
+            <button onclick="selectWeek(1)">Week 1</button>
+            <button onclick="selectWeek(2)">Week 2</button>
+            <button onclick="selectWeek(3)">Week 3</button>
+            <button onclick="selectWeek(4)">Week 4</button>
+            <button onclick="selectWeek(5)">Week 5</button>
+            <button onclick="selectWeek(6)">Week 6</button>
+            <button onclick="selectWeek(7)">Week 7</button>
+            <button onclick="selectWeek(8)">Week 8</button>
+            <button onclick="selectWeek(9)">Week 9</button>
+            <button onclick="selectWeek(10)">Week 10</button>
+        </div>
 
-    <div id="chat-container">
-        <div id="chat-box"></div>
-        <input type="text" id="user-input" placeholder="Type your question here..." onkeydown="if(event.key === 'Enter') sendMessage()">
+        <div id="chat-container">
+            <div id="chat-box"></div>
+            <input type="text" id="user-input" placeholder="Type your question here..." onkeydown="if(event.key === 'Enter') sendMessage()">
+        </div>
     </div>
 
     <script>
+        let chatHistory = [];
+
         function toggleDarkMode() {
             document.body.classList.toggle('dark-mode');
         }
@@ -219,9 +248,9 @@
 
         function selectWeek(week) {
             selectedWeek = week;
-            document.getElementById('subtitle').innerText = 'You have selected Week ' + week;
             document.getElementById('chat-container').style.display = 'block';
             document.getElementById('chat-box').innerHTML = ''; // Clear previous chat
+            chatHistory = []; // Clear chat history when selecting a new week
             document.getElementById('user-input').focus();
         }
 
@@ -239,28 +268,42 @@
             userMsgElement.innerText = userMessage;
             chatBox.appendChild(userMsgElement);
 
+            // Add to chat history
+            chatHistory.push({role: "user", content: userMessage});
+
             inputBox.value = '';
 
             // Scroll to the bottom of the chat box
             chatBox.scrollTop = chatBox.scrollHeight;
 
-            // Send the message to the backend (replace with your actual API call)
+            // Send the message along with the chat history to the backend
             fetch('/api/chat', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ week: selectedWeek, message: userMessage })
+                body: JSON.stringify({ 
+                    history: chatHistory, 
+                    message: userMessage 
+                })
             })
             .then(response => response.json())
             .then(data => {
-                const botMsgElement = document.createElement('div');
-                botMsgElement.className = 'message bot-message';
-                botMsgElement.innerText = data.response;
-                chatBox.appendChild(botMsgElement);
+                if (data.response) {
+                    const botMsgElement = document.createElement('div');
+                    botMsgElement.className = 'message bot-message';
+                    botMsgElement.innerText = data.response;
+                    chatBox.appendChild(botMsgElement);
 
-                // Scroll to the bottom of the chat box
-                chatBox.scrollTop = chatBox.scrollHeight;
+                    // Add bot response to chat history
+                    chatHistory.push({role: "assistant", content: data.response});
+
+                    // Scroll to the bottom of the chat box
+                    chatBox.scrollTop = chatBox.scrollHeight;
+                } else if (data.error) {
+                    console.error('Error:', data.error);
+                    alert('An error occurred: ' + data.error);
+                }
             })
             .catch(error => {
                 console.error('Error:', error);
